--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <head>
+<link rel="stylesheet" media="all" href="https://unpkg.com/survey-jquery/modern.min.css">
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/survey-jquery/1.9.58/survey.jquery.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.2.0/dist/sheetrock.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
-<link rel="stylesheet" media="all" href="https://unpkg.com/survey-jquery/modern.min.css">
+<script defer src="main.js"></script>
 </head>
 <body><script id="template" type="text/x-handlebars-template">{"elements":[{"type":"checkbox","name": "{{{escapeJson cellsArray.[2]}}}","title":"<pre>{{{escapeJson cellsArray.[3]}}} </pre>","isRequired":true,"showNoneItem":false,"choices":{{{variants (escapeJson cellsArray.[4])}}},"correctAnswer":{{{correctAnswers cellsArray.[5] (variants (escapeJson cellsArray.[4]))}}} },{"type":"html","name":"reasoning","html":"{{{escapeJson cellsArray.[6]}}}","visible":false}]},</script>
 <script id="setup-template" type="text/x-handlebars-template">
