Add images support

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <script defer src="https://unpkg.com/hotkeys-js@3.10.1/dist/hotkeys.min.js"></script>
 <script defer src="main.js"></script>
 </head>
-<body><script id="template" type="text/x-handlebars-template">{"elements":[{"type":"checkbox","name": "{{{escapeJson cellsArray.[2]}}}","title":"<pre>{{{cellsArray.[2]}}}. {{{escapeJson cellsArray.[3]}}} </pre>","isRequired":true,"showNoneItem":false,"choices":{{{variants (escapeJson cellsArray.[4])}}},"correctAnswer":{{{correctAnswers cellsArray.[5] (variants (escapeJson cellsArray.[4]))}}} },{"type":"html","name":"reasoning","html":"{{{escapeJson cellsArray.[6]}}}","visible":false}]},</script>
+<body><script id="template" type="text/x-handlebars-template">{"elements":[{"type":"checkbox","name": "{{{escapeJson cellsArray.[2]}}}","title":"<pre>{{{cellsArray.[2]}}}. {{{escapeJson cellsArray.[3]}}} </pre>","isRequired":true,"showNoneItem":false,"choices":{{{variants (escapeJson cellsArray.[4])}}},"imageUrl":"{{{cellsArray.[7]}}}","correctAnswer":{{{correctAnswers cellsArray.[5] (variants (escapeJson cellsArray.[4]))}}} },{"type":"html","name":"reasoning","html":"{{{escapeJson cellsArray.[6]}}}","visible":false}]},</script>
 <script id="setup-template" type="text/x-handlebars-template">
   {"value":"{{{cellsArray.[1]}}}","text":"{{{cellsArray.[0]}}} - {{{cellsArray.[1]}}} ({{{cellsArray.[2]}}})"},</script>
 <div id="questions" style="display: none;"></div>
-  <div id="surveyContainer"></div></body>
+<div id="surveyContainer"></div></body>
